Fix text-alignment on header-info-top.

--- a/static/public/css/style.css
+++ b/static/public/css/style.css
@@ -389,118 +389,113 @@ a:hover {
 
   /* line 7, ../sass/partials/_media-queries.scss */
   .header-info-top {
+    text-align: left;
     padding: 2.2em;
     padding-top: 3.5em;
     padding-bottom: 5.5em;
   }
   /* line 10, ../sass/partials/_media-queries.scss */
-  .header-info-top p,
-  .header-info-top h2,
-  .header-info-top h3 {
-    text-align: left;
-  }
-  /* line 14, ../sass/partials/_media-queries.scss */
   .header-info-top h3,
   .header-info-top p {
     font-size: 1.5em;
   }
-  /* line 17, ../sass/partials/_media-queries.scss */
+  /* line 13, ../sass/partials/_media-queries.scss */
   .header-info-top h2 {
     font-size: 2.1em;
     margin-top: 0;
   }
-  /* line 21, ../sass/partials/_media-queries.scss */
+  /* line 17, ../sass/partials/_media-queries.scss */
   .header-info-top h3 {
     margin-bottom: 0;
   }
 
-  /* line 30, ../sass/partials/_media-queries.scss */
+  /* line 26, ../sass/partials/_media-queries.scss */
   .content h1 {
     font-size: 2.2em;
   }
-  /* line 33, ../sass/partials/_media-queries.scss */
+  /* line 29, ../sass/partials/_media-queries.scss */
   .content p {
     font-size: 2em;
   }
 
-  /* line 39, ../sass/partials/_media-queries.scss */
+  /* line 35, ../sass/partials/_media-queries.scss */
   .newsletter h4 {
     font-size: 2.2em;
   }
-  /* line 43, ../sass/partials/_media-queries.scss */
+  /* line 39, ../sass/partials/_media-queries.scss */
   .newsletter .email-address,
   .newsletter .firstname {
     font-size: 1.5em;
   }
 
-  /* line 48, ../sass/partials/_media-queries.scss */
+  /* line 44, ../sass/partials/_media-queries.scss */
   .newsletter {
     padding: 1em;
   }
 
-  /* line 52, ../sass/partials/_media-queries.scss */
+  /* line 48, ../sass/partials/_media-queries.scss */
   .newsletter form #mc_embed_signup_scroll .mc-field-group {
     margin-top: 1.5em;
   }
 
-  /* line 56, ../sass/partials/_media-queries.scss */
+  /* line 52, ../sass/partials/_media-queries.scss */
   .newsletter form #mc_embed_signup_scroll .mc-field-group.col-md-8 .col-md-8 {
     padding: 0;
   }
 
-  /* line 60, ../sass/partials/_media-queries.scss */
+  /* line 56, ../sass/partials/_media-queries.scss */
   .newsletter .button {
     font-size: 1.5em;
   }
 
-  /* line 66, ../sass/partials/_media-queries.scss */
+  /* line 62, ../sass/partials/_media-queries.scss */
   .menu-box p:nth-child(1),
   .menu-box p:nth-child(2) {
     text-align: left;
   }
-  /* line 69, ../sass/partials/_media-queries.scss */
+  /* line 65, ../sass/partials/_media-queries.scss */
   .menu-box p:nth-child(1) {
     font-size: 1.8em;
     padding-bottom: 0.2em;
     font-weight: 700;
   }
-  /* line 74, ../sass/partials/_media-queries.scss */
+  /* line 70, ../sass/partials/_media-queries.scss */
   .menu-box p:nth-child(2) {
     font-size: 1.3em;
   }
 
-  /* line 79, ../sass/partials/_media-queries.scss */
+  /* line 75, ../sass/partials/_media-queries.scss */
   .menu-box.silver-sponsor,
   .menu-box.bronze-sponsor {
     margin-top: 0;
   }
 
-  /* line 83, ../sass/partials/_media-queries.scss */
+  /* line 79, ../sass/partials/_media-queries.scss */
   .gold-sponsor {
     margin-top: 5em;
   }
 
-  /* line 87, ../sass/partials/_media-queries.scss */
+  /* line 83, ../sass/partials/_media-queries.scss */
   .gold-sponsor-logo .col-md-7 {
     margin-left: 0;
     margin-top: 0em;
   }
-  /* line 90, ../sass/partials/_media-queries.scss */
+  /* line 86, ../sass/partials/_media-queries.scss */
   .gold-sponsor-logo .col-md-7 div:nth-child(1) {
     font-size: 1.7em;
   }
 
-  /* line 95, ../sass/partials/_media-queries.scss */
+  /* line 91, ../sass/partials/_media-queries.scss */
   .gold-sponsor-logo {
     margin-top: 2.5em;
   }
 
-  /* line 99, ../sass/partials/_media-queries.scss */
+  /* line 95, ../sass/partials/_media-queries.scss */
   .silver-sponsor-logo .col-md-3 {
     width: 37%;
   }
 
-  /* line 103, ../sass/partials/_media-queries.scss */
+  /* line 99, ../sass/partials/_media-queries.scss */
   .silver-sponsor-logo div:nth-child(1) div, .silver-sponsor-logo div:nth-child(2) div {
     margin-left: 0;
     height: 5em;
@@ -508,18 +503,18 @@ a:hover {
     padding-right: 2.5em;
   }
 
-  /* line 110, ../sass/partials/_media-queries.scss */
+  /* line 106, ../sass/partials/_media-queries.scss */
   .silver-sponsor-logo div:nth-child(2) {
     display: initial;
   }
 
-  /* line 114, ../sass/partials/_media-queries.scss */
+  /* line 110, ../sass/partials/_media-queries.scss */
   .bronze-sponsor-logo .col-md-2 {
     margin-top: 1em;
     width: 30%;
   }
 
-  /* line 121, ../sass/partials/_media-queries.scss */
+  /* line 117, ../sass/partials/_media-queries.scss */
   .bronze-sponsor-logo div:nth-child(1) div,
   .bronze-sponsor-logo div:nth-child(2) div,
   .bronze-sponsor-logo div:nth-child(3) div {
@@ -529,12 +524,12 @@ a:hover {
     font-size: 1.3em;
   }
 
-  /* line 128, ../sass/partials/_media-queries.scss */
+  /* line 124, ../sass/partials/_media-queries.scss */
   .bronze-sponsor-logo div:nth-child(2), .bronze-sponsor-logo div:nth-child(3) {
     display: initial;
   }
 
-  /* line 134, ../sass/partials/_media-queries.scss */
+  /* line 130, ../sass/partials/_media-queries.scss */
   .gold-sponsor-logo .col-md-7,
   .silver-sponsor-logo .col-md-3,
   .bronze-sponsor-logo .col-md-2 {
@@ -542,60 +537,60 @@ a:hover {
     padding-top: 1em;
   }
 
-  /* line 139, ../sass/partials/_media-queries.scss */
+  /* line 135, ../sass/partials/_media-queries.scss */
   .promote-sponsor-tab {
     padding-top: 2.5em;
     padding: 1.6em;
   }
-  /* line 142, ../sass/partials/_media-queries.scss */
+  /* line 138, ../sass/partials/_media-queries.scss */
   .promote-sponsor-tab p:nth-child(1) {
     font-size: 1.8em;
   }
 
-  /* line 147, ../sass/partials/_media-queries.scss */
+  /* line 143, ../sass/partials/_media-queries.scss */
   .promote-sponsor-button {
     margin-top: 1em;
     margin-left: 0.5em;
   }
 
-  /* line 152, ../sass/partials/_media-queries.scss */
+  /* line 148, ../sass/partials/_media-queries.scss */
   .footer-container p {
     font-size: 1.5em;
     margin-bottom: 0;
   }
 }
 @media only screen and (min-width: 1250px) {
-  /* line 162, ../sass/partials/_media-queries.scss */
+  /* line 158, ../sass/partials/_media-queries.scss */
   .header-info-top h3,
   .header-info-top p {
     font-size: 1.2em;
   }
-  /* line 165, ../sass/partials/_media-queries.scss */
+  /* line 161, ../sass/partials/_media-queries.scss */
   .header-info-top h2 {
     font-size: 2.2em;
   }
 
-  /* line 170, ../sass/partials/_media-queries.scss */
+  /* line 166, ../sass/partials/_media-queries.scss */
   .content p {
     font-size: 1.8em;
   }
 
-  /* line 174, ../sass/partials/_media-queries.scss */
+  /* line 170, ../sass/partials/_media-queries.scss */
   .gold-sponsor-logo {
     margin-top: 2.5em;
   }
 
-  /* line 178, ../sass/partials/_media-queries.scss */
+  /* line 174, ../sass/partials/_media-queries.scss */
   .gold-sponsor-logo .col-md-7 img {
     margin-top: 3em;
   }
 
-  /* line 183, ../sass/partials/_media-queries.scss */
+  /* line 179, ../sass/partials/_media-queries.scss */
   .promote-sponsor-button a a:hover {
     text-decoration: none;
   }
 
-  /* line 188, ../sass/partials/_media-queries.scss */
+  /* line 184, ../sass/partials/_media-queries.scss */
   .footer-container {
     padding-top: 3em;
     padding-bottom: 5em;
