--- a/static/public/sass/partials/_media-queries.scss
+++ b/static/public/sass/partials/_media-queries.scss
@@ -5,11 +5,7 @@
   }
 
   .header-info-top {
-    p,
-    h2,
-    h3 {
-      text-align: left;
-    }
+   text-align: left;
     h3,
     p {
       font-size: 1.5em;
